# mp3palyer

./: 894244c6ase  CMakeLists.txt  README.md  imgui.ini  logic_test.c  main.cpp  mp3-player  player_test  playlist.c  playlist.h  tui_test.c  ui.c  ui.h
files/ilog_v1/: 1750414833670
files/logan_cache/: logan.mmap2
iflytek_tts_sdk/ai/tts/: .build.sh.swp  894244c6ase  onlineTTS.cpp
include/: audio.h  files.h  types.h  ui.h
src/: audio.cpp  files.cpp  files.h  main.cpp  onlineTTS_Test.cpp  types.h  ui.cpp
test/: play_simple.c
